# intuitivo-ai-back-challenge

./: README.md  docker-compose.yaml
.devcontainer/: devcontainer.json  post_create.sh
backend/: Dockerfile  manage.py  pyproject.toml  requirements.txt
backend/backchallenge/: asgi.py  types.py  urls.py  wsgi.py
backend/backchallenge/accounts/: apps.py  serializers.py  urls.py  validators.py  views.py
backend/backchallenge/api/: apps.py  urls.py
backend/backchallenge/api/docs/: annotation.py  auth.py  image.py
backend/backchallenge/api/exceptions/: exception_handler.py  exceptions.py
backend/backchallenge/api/policies/: annotation.py
backend/backchallenge/api/renderers/: api_renderer.py
backend/backchallenge/api/serializers/: annotation.py  auth.py  image.py
backend/backchallenge/api/utils/http/: api_response.py
backend/backchallenge/api/views/: annotation.py  auth.py  image.py
backend/backchallenge/core/: apps.py  models.py
backend/backchallenge/core/management/commands/: load_images.py
backend/backchallenge/core/migrations/: 0001_initial.py
backend/backchallenge/settings/: base.py  prod.py
frontend/intuitivoaichallenge/: Dockerfile  next.config.js  package-lock.json  package.json
frontend/intuitivoaichallenge/components/: Annotation.jsx  AnnotationModal.jsx  CreateAnnotationModal.jsx  GoBackBtn.jsx  Header.jsx  Layout.jsx  Loading.jsx  NavLink.jsx  NotFound.jsx  PreviousNextBtns.jsx
frontend/intuitivoaichallenge/pages/: _app.jsx  annotate.jsx  images.jsx  index.jsx
frontend/intuitivoaichallenge/services/: annotation.service.js  (+2 more)
(+7 files in other folders)
